<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

       <item android:id="@+id/menu_archivo"
           android:title="@string/activity_menu_archivo"
           android:icon="@android:drawable/ic_dialog_alert"
           app:showAsAction="ifRoom"
           />

       <item android:id="@+id/menu_acerca_de"
           android:title="@string/activity_menu_acerca_de" />
       <item
           android:id="@+id/menu_editar"
           android:icon="@android:drawable/btn_star_big_off"
           android:title="@string/activity_menu_editar"
           app:showAsAction="never">

              <menu >
              <group>
                     <item
                         android:id="@+id/menu_editar_copiar"
                         android:icon="@android:drawable/ic_delete"
                         android:title="@string/activity_menu_editar_copiar" />

                     <item android:id="@+id/menu_editar_pegar"
                         android:title="@string/activity_menu_editar_pegar"
                         android:icon="@android:drawable/ic_dialog_email"/>

                     <item android:id="@+id/menu_ditar_cortar"
                         android:title="@string/activity_menu_editar_cortar"
                         android:icon="@android:drawable/ic_input_add"/>

              </group>


              </menu>

           </item>


</menu>